# stock-price-simulator

./: .gitignore  CMakeLists.txt  README.md  README.txt  build.sh  cliargs.cpp  cliargs.h  main.cpp  simulation_utils.cpp  simulation_utils.h
src/: gui.cpp  main.cpp  simulation_utils.cpp  simulation_utils.h  types.h
